[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/weapons/New/DeathRay.gd" type="Script" id=1]
[ext_resource path="res://assets/shader/ring2.gdshader" type="Shader" id=2]
[ext_resource path="res://assets/shader/DeathRay.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/image/bulb.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://assets/image/PngItem_130546.png" type="Texture" id=6]
[ext_resource path="res://assets/shader/shader01.gdshader" type="Shader" id=7]
[ext_resource path="res://assets/image/spark_07.png" type="Texture" id=8]
[ext_resource path="res://assets/sound/WarpDrive_00 (mp3cut.net)~1.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/WarpDrive_01.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/p2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 0.0, 0.128 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/p1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 1.0, 0.11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite3:material:shader_param/r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 0.01 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite3:material:shader_param/p3")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.173 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite3:material:shader_param/p1")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.701961, 0.960784, 0.635294, 1 ), Color( 0.701961, 0.960784, 0.635294, 1 ), Color( 0.701961, 0.960784, 0.635294, 0 ) ]
}
tracks/9/type = "method"
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("AudioStreamPlayer2D2:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("AudioStreamPlayer2D:playing")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "phase2"
length = 3.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:material:shader_param/r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.01, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3:material:shader_param/p3")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.173, 0.9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:material:shader_param/p1")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.005, 0.005, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("Area2D/CollisionShape2D")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "disabled", false ],
"method": "set_deferred"
}, {
"args": [ "disabled", true ],
"method": "set_deferred"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Area2D/CollisionShape2D:shape:extents")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 14.1859, 6.77605 ), Vector2( 458.505, 6.77605 ), Vector2( 458.505, 0.1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Area2D/CollisionShape2D:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 14.333, 0 ), Vector2( 462.839, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Spark:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Spark:material:shader_param/len")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 1.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Spark:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.2, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("AudioStreamPlayer2D:playing")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("AudioStreamPlayer2D2:playing")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/p1 = 1.0
shader_param/p2 = 0.0

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/max_light = 4.18
shader_param/color = Color( 0.701961, 0.960784, 0.635294, 1 )
shader_param/p1 = 0.0
shader_param/p2 = 0.173
shader_param/p3 = 0.9
shader_param/r = 0.0

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 7 )
shader_param/len = 1.0

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.642105, 1 )
colors = PoolColorArray( 1, 1.5, 1, 1, 1, 1.96078, 1, 1, 1, 1.5, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
bake_resolution = 10
_data = [ Vector2( 0.00469483, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.531818 ), -0.732679, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.17
orbit_velocity = 1.0
orbit_velocity_random = 0.0
scale = 0.02
scale_random = 0.01
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=11]
resource_local_to_scene = true
extents = Vector2( 458.505, 0.1 )

[node name="DeathRay" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/phase1 = SubResource( 1 )
anims/phase2 = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.701961, 0.960784, 0.635294, 1 )
material = SubResource( 3 )
scale = Vector2( 10, 10 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 418.514, 0 )
scale = Vector2( 20, 20 )
texture = ExtResource( 5 )

[node name="Spark" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 5 )
position = Vector2( 460.101, 0 )
scale = Vector2( 1.7946, 1 )
texture = ExtResource( 8 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
process_material = SubResource( 10 )
texture = ExtResource( 4 )

[node name="_Indicator" type="Sprite" parent="."]
position = Vector2( 16.0045, 0 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 462.839, 0 )
shape = SubResource( 11 )
disabled = true

[node name="Label" type="Label" parent="."]
margin_left = -21.1893
margin_top = 35.492
margin_right = 18.8107
margin_bottom = 49.492
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "SFX-BATTLE"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
bus = "SFX-BATTLE"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
